// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders if label and onClick params are passed in 1`] = `
<div
  data-testid="Button"
>
  <a
    class="sc-bczRLJ jnuacn"
  >
    <span>
      TEST
    </span>
    <img
      alt="arrow"
      class="sc-gsnTZi evuGak"
      src="arrow-right.svg"
    />
  </a>
</div>
`;

exports[`Button renders if label and url params are passed in 1`] = `
<div
  data-testid="Button"
>
  <a
    class="sc-bczRLJ jnuacn"
    href="www.google.com"
  >
    <span>
      TEST
    </span>
    <img
      alt="arrow"
      class="sc-gsnTZi evuGak"
      src="arrow-right.svg"
    />
  </a>
</div>
`;

exports[`Button renders if required and all optional params are passed in 1`] = `
<div
  data-testid="Button"
>
  <a
    class="sc-bczRLJ jnuacn"
    href="www.google.com"
  >
    <span>
      TEST
    </span>
    <img
      alt="arrow"
      class="sc-gsnTZi evuGak"
      src="arrow-right.svg"
    />
  </a>
</div>
`;
